cmake_minimum_required(VERSION 2.8.9)
project (example)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fPIC") 

FIND_PACKAGE(SWIG REQUIRED)
INCLUDE(${SWIG_USE_FILE})

FIND_PACKAGE(PythonLibs)
INCLUDE_DIRECTORIES(${PYTHON_INCLUDE_PATH} include)

INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR})

SET(CMAKE_SWIG_FLAGS "")

SET_SOURCE_FILES_PROPERTIES(src/example.i PROPERTIES CPLUSPLUS ON)
SET_SOURCE_FILES_PROPERTIES(src/example.i PROPERTIES SWIG_FLAGS "-includeall")
SWIG_ADD_MODULE(example python src/example.i src/example.cpp) 
SWIG_LINK_LIBRARIES(example ${PYTHON_LIBRARIES})


