cmake_minimum_required(VERSION 2.8.9)
project (example)

set(CMAKE_BUILD_TYPE Debug)
set(CMAKE_CPP_FLAG "-fPIC ${CMAKE_CPP_FLAG}")

set(CMAKE_CPP_FLAGS_DEBUG "${CMAKE_CPP_FLAGS_DEBUG} -Wall -g -00")
set(CMAKE_CPP_FLAGS_RELEASE "${CMAKE_CPP_FLAGS_RELEASE}")


FIND_PACKAGE(SWIG REQUIRED)
INCLUDE(${SWIG_USE_FILE})


option(WITH_PYTHON3 "WITH_PYTHON3" OFF)

if(WITH_PYTHON3)
	FIND_PACKAGE(PythonLibs 3 REQUIRED)
	INCLUDE_DIRECTORIES(${PYTHON_INCLUDE_PATH})
else(WITH_PYTHON3)
	FIND_PACKAGE(PythonLibs 2 REQUIRED)
	INCLUDE_DIRECTORIES(${PYTHON_INCLUDE_PATH})
endif(WITH_PYTHON3)


INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR})

INCLUDE_DIRECTORIES(include)

SET(CMAKE_SWIG_FLAGS "-c++")

SET_SOURCE_FILES_PROPERTIES(src/example.i PROPERTIES CPLUSPLUS ON)
SET_SOURCE_FILES_PROPERTIES(src/example.i PROPERTIES SWIG_FLAGS "")
SWIG_ADD_MODULE(example python src/example.i src/example.cpp include/example.h) 
SWIG_LINK_LIBRARIES(example ${PYTHON_LIBRARIES})

set(LIB_TARGET "_${PROJECT_NAME}.so")
set(PY_TARGET "${PROJECT_NAME}.py")
set(PYC_TARGET "${PROJECT_NAME}.pyc")

INSTALL(FILES ${CMAKE_CURRENT_BINARY_DIR}/${LIB_TARGET}
  ${CMAKE_CURRENT_BINARY_DIR}/${PY_TARGET} ${CMAKE_CURRENT_BINARY_DIR}/${PYC_TARGET}
  DESTINATION lib/python)


set_property(SOURCE example.i PROPERTY SWIG_MODULE_NAME example_realname)



